fixing search results spacing issue with comment button

--- a/client-assets/client.scss
+++ b/client-assets/client.scss
@@ -535,7 +535,7 @@ p.wp-block-subhead,
 }
 
 .entry-footer .cat-links,
-.entry-footer .tag-links {
+.entry-footer .tags-links {
     margin-bottom: 20px;
     display: block;
 }
